--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "canvas": "^2.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "redux": "^5.0.1",
