--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.26.2",
+    "react-router-hash-link": "^2.4.3",
     "redux": "^5.0.1",
     "sass": "^1.75.0"
   },
